<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".status_activity.FiveActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="@dimen/default_value">


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            card_view:cardBackgroundColor="@color/light_grey"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            android:elevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:src="@drawable/contract"
                    android:scaleType="centerCrop"
                    android:layout_marginBottom="@dimen/default_value"/>

                <!-- Property -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/default_value"
                    android:layout_marginRight="@dimen/default_value"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/one"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_property_details"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dots"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/property_status"
                        android:layout_marginLeft="@dimen/default_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/completed"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/green"/>


                </LinearLayout>

                <!-- Owner -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/default_value"
                    android:layout_marginRight="@dimen/default_value"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/two"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_owner_details"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dots"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/owner_status"
                        android:layout_marginLeft="@dimen/default_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/completed"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/green"/>

                </LinearLayout>

                <!-- Tenant -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/default_value"
                    android:layout_marginRight="@dimen/default_value"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/three"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_tenant_details"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dots"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tenant_status"
                        android:layout_marginLeft="@dimen/default_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/completed"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/green"/>

                </LinearLayout>

                <!-- Witness -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/default_value"
                    android:layout_marginRight="@dimen/default_value"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/four"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_witness_details"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dots"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/witness_status"
                        android:layout_marginLeft="@dimen/default_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/completed"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/green"/>

                </LinearLayout>

                <!-- Rent Payment -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/default_value"
                    android:layout_marginRight="@dimen/default_value"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/five"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_rent_details"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dots"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/rent_status"
                        android:layout_marginLeft="@dimen/default_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/completed"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/green"/>

                </LinearLayout>

                <!-- Agreement Payment -->
                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/default_value"
                    android:layout_marginRight="@dimen/default_value"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/six"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_rent_trans_details"
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="..."
                        android:textSize="14sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/rent_trans_status"
                        android:layout_marginLeft="@dimen/default_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/completed"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/green"/>

                </LinearLayout>-->

                <!-- Submit Button -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnNext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:text="Next"
                        android:textColor="@color/white" />

                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>